--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -9,7 +9,7 @@ LABEL io.k8s.description="A basic Apache HTTP Server child image, uses ONBUILD" 
 
 EXPOSE 8080
 
-RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httd.conf
+RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf
 
 RUN chgrp -R 0 /var/log/httpd /var/un/httpd && \
     chmod -R g=u /var/log/httpd /var/run/httpd
