--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -148,7 +148,7 @@ pipeline {
                     openshift.withCluster() {
                         //TODO: Watch deployment until pod is in 'Running' state
 			openshift.withProject( "${STAGE_PROJECT}") {
-			  def deployment = openshift.selector("dc", "${APP_NAME}").rollout(
+			  def deployment = openshift.selector("dc", "${APP_NAME}").rollout()
 			  openshift.selector("dc", "${APP_NAME}").related('pods').untilEac(1) {
 			    return (it.object().status.phase == "Runing")
 			  }
